--- a/style.css
+++ b/style.css
@@ -6,20 +6,40 @@
 }
 
 body {
-    height: 100px;
-    width: 100px;
+    height: 100vh;
+    width: 100vw;
+    background-color: beige;
 
 }
 
 header {
-    height: 30px;
-    background-color: rgb(red, green, blue);
+    height: 33px;
+    background-color: rgb(101, 92, 92);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0;
 }
 
-li {
+h1 {
     font-size: 50px
+    
+}
+
+a, p{
+    text-decoration: now;
+    font-size: 30px;
+}
+
+.navLinks {
+    display: flex;
+    gap: 12px
+}
+
+.dropdownContent {
+    position: absolute;
+    background-color: grey;
+    max-height: 0px;
+    transition: all;
+    overflow: hidden;
 }
